# bbo-spdc-validation

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: default.json
data/experimental/: README.md  experimental_counts.csv
docs/: data_strategy.md  public_data_sources.md  remaining_work.md  vscode_github_steps.md
src/bbo_spdc/: __init__.py  cli.py  constants.py  counter.py  data_io.py  data_loaders.py  phase_matching.py  plots.py  polarization.py  polarization_validation.py  ring.py  sellmeier.py  spatial_data.py  spatial_validation.py  thesis_outputs.py  theta_validation.py  validation_metrics.py
tests/: test_data_io.py  test_data_loaders.py  test_phase_matching.py  test_polarization.py  test_ring.py  test_spatial_data.py  test_validation_metrics.py  test_validation_workflows.py
