[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbo-spdc-validation"
version = "0.1.0"
description = "Type-I SPDC simulations for BBO crystals and comparison with experimental data."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Tez calismasi" }
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7"
]

[project.scripts]
bbo-spdc = "bbo_spdc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
